--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.7",
     "element-plus": "^2.8.7",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5",
     "vuetify": "^3.7.3"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.17.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
